# TicTacToe_Embedded2027

./: .gitignore  README.md  make.bat
.github/workflows/: build.yml  main.yml
Alpha Versions/Alpha V1.0/: AItest.h  PasswordHash.cpp  main.cpp  test_0.pro
Alpha Versions/Alpha V1.1/: AItest.h  GameSettings.cpp  GameSettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow1.cpp  mainwindow1.h  mainwindow1.ui  test_0.pro  (+1 more)
Beta Versions/: database.cpp  main.cpp  mainwindow1.cpp  mainwindow1.ui  secdialog.ui  test_0.pro.user.9b34073
FullTerminalAPP/: AICodeImproved.cpp  AItest.h  CMakeLists.txt  GameLogicTest.cpp  PasswordHash.cpp  database.cpp
Full_QT_APP_ISA/: AItest.h  GameSettings.cpp  GameSettings.h  database.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
GameLogic on GUI/: main.cpp
Graphics/: Export Project Graphics.ai  Game Icon.ai  Tic Tac Toe UI.ai
Learning_Phase/: texttest.txt
Release_V1.0/: AItest.h  gametest.h  images.qrc  secdialog.cpp  secdialog.ui
TicTacToeInstaller_V1.0/: installer_script.iss  moc_mainwindow1.cpp
TicTacToe_ver1/: Login.cpp  Login.h  Login.ui  TicTacToe_ver1.pro
login/: imgs.qrc  login.pro  login.pro.user.6217e7f  login.pro.user.8030d1d  login.pro.user.9b34073  login.pro.user.dd8e853  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  secdialog.cpp  secdialog.h  secdialog.ui  secdialog.ui.autosave
tic_tac_toe_test/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  play_mode.cpp  play_mode.h  play_mode.ui
(+156 files in other folders)
